Bug 65256 - [pnv] Phantom LVDS -- Intel D525MW mainboard
Summary: [pnv] Phantom LVDS -- Intel D525MW mainboard
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-02 07:59 UTC by Cornel Panceac
Modified: 2017-07-24 22:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg (92.53 KB, text/plain)
2013-06-02 08:11 UTC, Cornel Panceac
no flags Details
xorg log (29.94 KB, text/plain)
2013-06-02 08:12 UTC, Cornel Panceac
no flags Details
vbios dump (64.00 KB, application/octet-stream)
2013-06-02 08:13 UTC, Cornel Panceac
no flags Details

Description Cornel Panceac 2013-06-02 07:59:29 UTC
On Intel D525MW motherboard (dual core atom inside) anaconda in f19 shows only a unmovable mouse cursor if booted without nomodeset. With nomodeset, install can proceed, After install, without nomodeset Gnome3, Cinnamonn, Mate and Xfce show no desktop icons and no panels. With nomodeset, all these are shown even though X uses software rendering to display them, thus heating the processor.

# lspci -nn | grep VGA
00:02.0 VGA compatible controller [0300]: Intel Corporation Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller [8086:a001] (rev 02)

# uname -a
Linux localhost.localdomain 3.9.4-300.fc19.i686.PAE #1 SMP Fri May 24 23:19:44 UTC 2013 i686 i686 i386 GNU/Linux

# rpm -qa | grep intel
xorg-x11-drv-intel-2.21.8-1.fc19.i686

# rpm -qa | grep x11-server
xorg-x11-server-common-1.14.1-2.fc19.i686

# rpm -qa | grep mesa-dri
mesa-dri-drivers-9.2-0.7.20130528.fc19.i686

# rpm -qa | grep libdrm
libdrm-2.4.45-1.fc19.i686

# cat /etc/fedora-release
Fedora release 19 (Schrödinger’s Cat)

# dmidecode --type=baseboard
# dmidecode 2.12
SMBIOS 2.5 present.

Handle 0x0006, DMI type 2, 20 bytes
Base Board Information
        Manufacturer: Intel Corporation
        Product Name: D525MW
        Version: AAE93082-401
        Serial Number: BTMW1520038H
        Asset Tag: Base Board Asset Tag
        Features:
                Board is a hosting board
                Board is replaceable
        Location In Chassis: Base Board Chassis Location
        Chassis Handle: 0x0007
        Type: Unknown
        Contained Object Handles: 0

Handle 0x000D, DMI type 10, 6 bytes
On Board Device Information
        Type: Video
        Status: Enabled
        Description: Intel(R) GMA 3150 Video Device

Monitor is connected to VGA

Steps to reproduce:
1.MAke kdm your default display manager
2.Boot without nomodeset
3.Select Gnome/Cinnamon/Mate/Xfce, as session

Expected results:
Panels and desktop icons are there

Actual results:
No panels, no desktop icons. Always.

More info:
On the other hand, i"ve seen keyboard locked, when booting with nomodeset and
, when using text interface, sometimes (most of the times?) the screen gets scrambled with coloured numbers and other chars, after typing a few lines (like user name and password). Switching back to GUI and then back to text, seems to restore text visibility.

I"ll attach the other required info after rebooting with drm.debug=0x06 and without nomodeset.
Comment 1 Cornel Panceac 2013-06-02 08:11:08 UTC
i got this:

# intel_reg_dumper > ~cornel/intel_reg_dumper.txt
Gen2/3 Ranges are not supported. Please use unsafe access.Aborted (core dumped)
Comment 2 Cornel Panceac 2013-06-02 08:11:32 UTC
Created attachment 80147 [details]
dmesg
Comment 3 Cornel Panceac 2013-06-02 08:12:07 UTC
Created attachment 80148 [details]
xorg log
Comment 4 Cornel Panceac 2013-06-02 08:13:17 UTC
Created attachment 80149 [details]
vbios dump
Comment 5 Chris Wilson 2013-06-02 08:40:22 UTC
Don't even bother trying to use the OpenGL compositors with extended desktops as mesa can not handle anything over 2048 pixels wide, and UXA is hardly any better.
Comment 6 Chris Wilson 2013-06-04 15:45:21 UTC
Can you confirm that your issue is in trying to use an extended desktop, and a single monitor works?
Comment 7 Cornel Panceac 2013-06-04 17:16:26 UTC
No, i'm using a single 20" HP 2035 monitor. I've never tried to use two displays on this system. What may be interesting is that i'm using the analog VGA connection.
Comment 8 Chris Wilson 2013-06-04 18:40:57 UTC
You have a desktop that extends from the LVDS to the VGA. Have a look at the output of xrandr, and perhaps try xrandr --output LVDS1 --off. If the LVDS is a phantom output, append video=LVDS-1:d to your kernel command line to permanently disable it.
Comment 9 Cornel Panceac 2013-06-05 17:21:32 UTC
$ xrandr
xrandr: Failed to get size of gamma for output default
Screen 0: minimum 640 x 480, current 1600 x 1200, maximum 1600 x 1200
default connected 1600x1200+0+0 0mm x 0mm
   1600x1200       0.0* 
   1280x1024       0.0  
   1024x768        0.0  
   800x600         0.0  
   640x480         0.0  

$ xrandr --output LVDS1 --off
xrandr: Failed to get size of gamma for output default
warning: output LVDS1 not found; ignoring

It seems the problem does not come from LVDS1.
Comment 10 Chris Wilson 2013-06-05 17:52:48 UTC
You weren't using the intel driver when you executed that command, so the results are inconclusive.
Comment 11 Cornel Panceac 2013-06-05 18:16:47 UTC
Of course you're right :)

Here's the output after booting without nomodeset:

$ xrandr
Screen 0: minimum 320 x 200, current 2880 x 1200, maximum 4096 x 4096
LVDS1 connected 1280x800+0+0 (normal left inverted right x axis y axis) 0mm x 0mm
   1280x800       58.1*+
   1024x768       60.0  
   800x600        60.3     56.2  
   640x480        59.9  
VGA1 connected 1600x1200+1280+0 (normal left inverted right x axis y axis) 408mm x 306mm
   1600x1200      60.0*+   75.0  
   1280x1024      85.0     75.0     60.0  
   1280x960       60.0  
   1152x864       75.0  
   1024x768       85.0     75.1     70.1     60.0  
   832x624        74.6  
   800x600        85.1     75.0     60.3  
   640x480        85.0     75.0     60.0  
   720x400        70.1  

disabling the "second screen" left the first terminal mostly on /dev/null but that"S ok. I"ve added the bootparam and i will check after reboot.
Comment 12 Cornel Panceac 2013-06-05 18:19:46 UTC
Indeed, adding the bootparam fixed this issue. Can this somehow be automated? 

Thank you.
Comment 13 Chris Wilson 2013-06-05 18:50:27 UTC
If you can attach the output of dmidecode, we can add a quirk so that the LVDS is no longer incorrectly detected. So long as we can uniquely identify this mainboard as being a no-LVDS variant...
Comment 14 Cornel Panceac 2013-06-05 19:01:21 UTC
I assume only the baseboard is required. Please let me know if you need more dmidecode output.

# dmidecode --type=baseboard
# dmidecode 2.12
SMBIOS 2.5 present.

Handle 0x0006, DMI type 2, 20 bytes
Base Board Information
	Manufacturer: Intel Corporation
	Product Name: D525MW
	Version: AAE93082-401
	Serial Number: BTMW1520038H
	Asset Tag: Base Board Asset Tag
	Features:
		Board is a hosting board
		Board is replaceable
	Location In Chassis: Base Board Chassis Location
	Chassis Handle: 0x0007
	Type: Unknown
	Contained Object Handles: 0

Handle 0x000D, DMI type 10, 6 bytes
On Board Device Information
	Type: Video
	Status: Enabled
	Description: Intel(R) GMA 3150 Video Device

Handle 0x000E, DMI type 10, 6 bytes
On Board Device Information
	Type: Ethernet
	Status: Enabled
	Description: Realtek RTL8111DL Ethernet Device

Handle 0x000F, DMI type 10, 6 bytes
On Board Device Information
	Type: Sound
	Status: Enabled
	Description: Intel(R) High Definition Audio Device

Just in case, here's the system also:
# dmidecode --type=system
# dmidecode 2.12
SMBIOS 2.5 present.

Handle 0x0005, DMI type 1, 27 bytes
System Information
	Manufacturer:                                 
	Product Name:                                 
	Version:                         
	Serial Number:                                 
	UUID: 107B9F40-2CD0-11E1-AFD0-386077CE85AD
	Wake-up Type: Power Switch
	SKU Number: Not Specified
	Family: Not Specified

Handle 0x0011, DMI type 32, 20 bytes
System Boot Information
	Status: No errors detected
Comment 15 Chris Wilson 2013-06-06 13:27:02 UTC
See also bug 63860 for some patches.
Comment 16 Chris Wilson 2013-07-07 10:19:11 UTC
commit dcf6d294830d46b0e6901477fb4bf455281d90c8
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Wed Jul 3 15:05:05 2013 -0700

    drm/i915: quirk away phantom LVDS on Intel's D525MW mainboard


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.